feat: log system