@@ -2,6 +2,8 @@ package top.alazeprt.plugifycraft.util;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import top.alazeprt.pclib.util.Plugin;
 import top.alazeprt.pclib.util.SpigotPlugin;
 
@@ -22,6 +24,7 @@ public class CacheManager {
     protected static DownloadInfo currentDownloadInfo;
     protected static Thread downloadThread;
     private static long lastDownloadTime = -1;
+    final static Logger logger = LoggerFactory.getLogger(CacheManager.class);
 
     public static String getStatus(DownloadInfo downloadInfo) {
         if (downloadQueue.contains(downloadInfo)) return "等待中";
@@ -31,11 +34,13 @@ public class CacheManager {
     }
 
     public static boolean download(Plugin plugin, int version, File path, int threadCount) throws IOException {
+        logger.info("Preparing to download plugin {} of version {}", plugin.name, version);
         String platform = plugin instanceof SpigotPlugin ? "Spigot" : "Hangar";
         DownloadInfo downloadInfo = new DownloadInfo(plugin, platform, plugin.id, version, path, threadCount);
         for (CachePlugin cachePlugin : cachePluginList) {
             if (cachePlugin.id() == plugin.id && cachePlugin.platform().equals(platform) &&
                     cachePlugin.version() == version && cachePlugin.cacheFile() != null && cachePlugin.cacheFile().exists()) {
+                logger.info("Found downloaded plugin in cache (plugin named {} of version {}), cache path: {}", plugin.name, version, cachePlugin.cacheFile().getAbsolutePath());
                 Files.copy(cachePlugin.cacheFile().toPath(), new File(path, cachePlugin.cacheFile().getName()).toPath(), StandardCopyOption.REPLACE_EXISTING);
                 completedQueue.add(downloadInfo);
                 return true;
@@ -49,11 +54,13 @@ public class CacheManager {
             cacheDir.delete();
             cacheDir.mkdirs();
         }
+        logger.info("Adding plugin download task to queue (plugin named {} of version {})", plugin.name, version);
         downloadQueue.add(downloadInfo);
         return false;
     }
 
     public static void load() throws FileNotFoundException {
+        logger.info("Loading cache...");
         File file = new File(".plugifycraft/cache");
         downloadThread = new Thread(() -> {
             while (true) {
@@ -68,6 +75,7 @@ public class CacheManager {
                     } catch (InterruptedException ignored) {}
                 }
                 DownloadInfo downloadInfo = downloadQueue.poll();
+                logger.info("Receiving new download task: " + downloadInfo.plugin().name + " of version " + downloadInfo.version());
                 currentDownloadInfo = downloadInfo;
                 File cacheDir = new File(".plugifycraft/cache");
                 File f = null;
@@ -82,7 +90,7 @@ public class CacheManager {
                     Files.copy(f.toPath(), new File(downloadInfo.path(), f.getName()).toPath(), StandardCopyOption.REPLACE_EXISTING);
                     success = true;
                 } catch (IOException e) {
-                    e.printStackTrace();
+                    logger.error("Failed to download plugin " + downloadInfo.plugin().name + " of version " + downloadInfo.version(), e);
                 }
                 if (success) cachePluginList.add(new CachePlugin(downloadInfo.platform(), downloadInfo.pluginId(), downloadInfo.version(), f));
                 completedQueue.add(downloadInfo);
@@ -123,6 +131,7 @@ public class CacheManager {
     }
 
     public static void save() throws IOException {
+        logger.info("Saving cache...");
         if (downloadThread != null && downloadThread.isAlive()) {
             downloadThread.interrupt();
         }
@@ -141,6 +150,7 @@ public class CacheManager {
         Gson gson = new Gson();
         JsonObject jsonObject = new JsonObject();
         for (CachePlugin cachePlugin : cachePluginList) {
+            logger.debug("Saving plugin {} of version {} to cache", cachePlugin.platform(), cachePlugin.version());
             JsonObject cacheObject = new JsonObject();
             cacheObject.addProperty("platform", cachePlugin.platform());
             cacheObject.addProperty("id", cachePlugin.id());
@@ -148,6 +158,6 @@ public class CacheManager {
             cacheObject.addProperty("path", cachePlugin.cacheFile().getAbsolutePath());
             jsonObject.add(cachePlugin.cacheFile().getName(), cacheObject);
         }
-        Files.write(cacheConfig.toPath(), gson.toJson(jsonObject).getBytes(StandardCharsets.UTF_8));
+        Files.writeString(cacheConfig.toPath(), gson.toJson(jsonObject));
     }
 }
